# evelynn-place

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: config.rs  env.rs  lib.rs  main.rs
backend/src/api/: mod.rs  test.rs
backend/src/middleware/: claims.rs  mod.rs
backend/supabase/: config.toml
backend/supabase/migrations/: 20250606115219_create_nanoid_function.sql
frontend/: .env.example  package-lock.json  package.json
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/stores/: JwtTokenStore.ts  SupaStore.ts  VisualStore.ts
frontend/src/lib/styles/: app.css
frontend/src/lib/utils/: createPersistentStore.ts  fetchWithAuth.ts  storeCodecs.ts  supabaseUtils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
prisma/: schema.prisma  seed.ts
src/: app.d.ts  app.html  hooks.server.ts
src/lib/components/: Login.svelte  Navbar.svelte  ThemeDebug.svelte  Toast.svelte  ToggleTheme.svelte
src/lib/stores/: ToastStore.ts  TokenStore.ts  VisualStore.ts
src/lib/styles/: globals.css
src/lib/types/: redirectError.type.ts  route.type.ts  toast.type.ts  userCustomClaims.type.ts
src/lib/utils/: cookie.ts  getPermittedRoutes.ts  supabaseUtils.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/(user)/: +layout.server.ts
supabase/: config.toml
supabase/migrations/: 20250210163036_create_nanoid_function.sql
(+12 files in other folders)
